--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "type": "symfony-bundle",
   "license": "MIT",
   "authors": [{
-    "name" : "Alvaro Videla"
+    "name" : "Andres Cevallos"
   }],
   "require": {
     "php"                          : ">=5.3.0",
@@ -13,8 +13,7 @@
     "symfony/event-dispatcher"     : "~2.3",
     "symfony/config"               : "~2.3",
     "symfony/yaml"                 : "~2.3",
-    "symfony/console"              : "~2.3",
-    "videlalvaro/php-amqplib"      : "~2.6"
+    "symfony/console"              : "~2.3"
   },
   "suggest": {
     "symfony/framework-bundle" : "To use this lib as a full Symfony Bundle and to use the profiler data collector"
